--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
+    "immutable": "^3.8.1",
     "react": "~15.3.0",
     "react-native": "~0.39.0",
     "react-native-uuid": "^1.4.9",
